https://trello.com/c/xgu5cdxt/98-fix-quick-display-long-text-overflow

--- a/css/elements/_progress.css
+++ b/css/elements/_progress.css
@@ -19,7 +19,8 @@
 
     color: white;
     text-shadow: 1px 1px black, 1px 1px 3px black;
-    /* TODO truncate */
+
+    max-width: 100%;
 }
 
 .progress-bar {
